# mips324k_sim

./: .gitignore  CMakeLists.txt  TODO
input/: fibb.asm  sim1.asm  sim2.asm  test.asm  test.s  test_all.asm  test_small.asm
src/: mips324k_sim.c  util.c
src/helpers/: linked_list.c  queue.c
src/helpers/include/: linked_list.h  queue.h
src/include/: mips324k_sim.h  parser.h  util.h
src/parsers/: parser.c  sim.l  sim.y
src/parsers/include/: parser.h
src/simulator/: alu.c  branchComponent.c  simulator.c  util.c
src/simulator/include/: alu.h  branchComponent.h  simulator.h  util.h
